--- a/mixtory/app/config/routing.yml
+++ b/mixtory/app/config/routing.yml
@@ -1,3 +1,6 @@
-app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
+site_homepage:
+    path:     /
+    defaults: { _controller: AppBundle:Default:index }
+site_register:
+    path:     /
+    defaults: { _controller: AppBundle:Default:newline }
