--- a/mixtory/app/config/routing.yml
+++ b/mixtory/app/config/routing.yml
@@ -5,7 +5,7 @@ site_firstline:
     path:     /New
     defaults: { _controller: AppBundle:Default:firstline }
 site_register:
-    path:     /New/{id}
+    path:     /New/{nbrAuteurs}
     defaults: { _controller: AppBundle:Default:newline }
     requirements:
       id: \d+
